// Story Nest — import this file at https://dbdiagram.io
// Source schema: migrations/001_initial_schema.sql

Enum user_role {
  USER
  ADMIN
}

Enum account_status {
  ACTIVE
  SUSPENDED
  DELETED
}

Enum visibility {
  PUBLIC
  PRIVATE
}

Enum story_state {
  DRAFT
  ONGOING
  COMPLETED
  HIATUS
}

Enum publication_status {
  DRAFT
  PUBLISHED
  HIDDEN
  REMOVED
}

Enum comment_status {
  ACTIVE
  HIDDEN
  REMOVED
}

Enum report_status {
  PENDING
  REVIEWING
  RESOLVED
  DISMISSED
}

Enum notification_type {
  NEW_CHAPTER
  STORY_UPDATED
  NEW_FOLLOWER
  COMMENT
  REPORT_RESOLVED
  SYSTEM
}

Table users {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  email varchar(320) [not null, unique]
  username varchar(50) [not null, unique]
  password_hash text [not null]
  display_name varchar(100) [not null]
  avatar_url text
  bio text
  role user_role [not null, default: 'USER']
  status account_status [not null, default: 'ACTIVE']
  email_verified_at timestamptz
  last_login_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table genres {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name varchar(80) [not null, unique]
  slug varchar(100) [not null, unique]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table stories {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  owner_id uuid [not null]
  title varchar(300) [not null]
  slug varchar(350) [not null, unique]
  summary text
  cover_image_url text
  visibility visibility [not null, default: 'PRIVATE']
  state story_state [not null, default: 'DRAFT']
  publication_status publication_status [not null, default: 'DRAFT']
  published_at timestamptz
  deleted_at timestamptz
  search_vector tsvector [note: 'PostgreSQL generated full-text-search column']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table story_genres {
  story_id uuid [not null]
  genre_id uuid [not null]

  indexes {
    (story_id, genre_id) [pk]
  }
}

Table chapters {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  story_id uuid [not null]
  title varchar(300) [not null]
  content text [not null]
  chapter_number integer [not null]
  publication_status publication_status [not null, default: 'DRAFT']
  published_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (story_id, chapter_number) [unique]
  }
}

Table story_follows {
  user_id uuid [not null]
  story_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, story_id) [pk]
  }
}

Table story_favorites {
  user_id uuid [not null]
  story_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, story_id) [pk]
  }
}

Table user_follows {
  follower_id uuid [not null]
  following_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (follower_id, following_id) [pk]
  }
}

Table reading_progress {
  user_id uuid [not null]
  story_id uuid [not null]
  chapter_id uuid [not null]
  position integer [not null, default: 0]
  last_read_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, story_id) [pk]
  }
}

Table story_views {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  story_id uuid [not null]
  chapter_id uuid
  user_id uuid
  viewed_at timestamptz [not null, default: `now()`]
}

Table comments {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  author_id uuid [not null]
  story_id uuid [note: 'Exactly one of story_id or chapter_id is required']
  chapter_id uuid [note: 'Exactly one of story_id or chapter_id is required']
  parent_id uuid
  body text [not null]
  status comment_status [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table ratings {
  user_id uuid [not null]
  story_id uuid [not null]
  score smallint [not null, note: 'Value from 1 to 5']
  review text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, story_id) [pk]
  }
}

Table notifications {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  recipient_id uuid [not null]
  actor_id uuid
  type notification_type [not null]
  title varchar(300) [not null]
  body text
  data jsonb [not null, default: `{}`]
  read_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table reports {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  reporter_id uuid [not null]
  story_id uuid [note: 'Exactly one report target is required']
  chapter_id uuid [note: 'Exactly one report target is required']
  comment_id uuid [note: 'Exactly one report target is required']
  reason varchar(100) [not null]
  details text
  status report_status [not null, default: 'PENDING']
  handled_by uuid
  resolution_note text
  created_at timestamptz [not null, default: `now()`]
  handled_at timestamptz
}

Ref: stories.owner_id > users.id
Ref: story_genres.story_id > stories.id
Ref: story_genres.genre_id > genres.id
Ref: chapters.story_id > stories.id
Ref: story_follows.user_id > users.id
Ref: story_follows.story_id > stories.id
Ref: story_favorites.user_id > users.id
Ref: story_favorites.story_id > stories.id
Ref: user_follows.follower_id > users.id
Ref: user_follows.following_id > users.id
Ref: reading_progress.user_id > users.id
Ref: reading_progress.story_id > stories.id
Ref: reading_progress.chapter_id > chapters.id
Ref: story_views.story_id > stories.id
Ref: story_views.chapter_id > chapters.id
Ref: story_views.user_id > users.id
Ref: comments.author_id > users.id
Ref: comments.story_id > stories.id
Ref: comments.chapter_id > chapters.id
Ref: comments.parent_id > comments.id
Ref: ratings.user_id > users.id
Ref: ratings.story_id > stories.id
Ref: notifications.recipient_id > users.id
Ref: notifications.actor_id > users.id
Ref: reports.reporter_id > users.id
Ref: reports.handled_by > users.id
Ref: reports.story_id > stories.id
Ref: reports.chapter_id > chapters.id
Ref: reports.comment_id > comments.id
